Fix for display of long user name
This solves issue wher use name is too long and is not correctyl displayed
in console header.
Name is shortende and ellipsis is added.
When mouse is hoovered over username its full name is displayed in tooltip.

Solution was first tried by setting style on button, but it didn't work, so
I had to resolve to changing console.css for button.

This solves issue 1191.

--- a/console/web/src/main/webapp/css/console.css
+++ b/console/web/src/main/webapp/css/console.css
@@ -203,6 +203,9 @@ table#header-button td, table#header-button button{
 	background-color: rgb(6,39,68) !important;
 	color: #FFFFFF !important;
 	font-weight: bold !important;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .x-menu-item-icon.fa {
